@@ -1,3 +1,4 @@
+	* use string_view in entry interface
 	* deprecate "send_stats" property on trackers (since lt_tracker extension has
 	  been removed)
 	* remove deprecate session_settings API (use settings_pack instead)
